Fixed custom theme overflow.

--- a/less/evol-colorpicker.less
+++ b/less/evol-colorpicker.less
@@ -79,6 +79,10 @@
 	text-align:center;
 }
 
+.cust-theme {
+  border-spacing: 4px 3px;
+}
+
 .evo-colorind,
 .evo-colorind-ie,
 .evo-colorind-ff {
